<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id = "@+id/titleLabelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/login"
        android:textAlignment="center"
        style = "@style/TextAppearance.MaterialComponents.Headline4"/>

    <TextView
        android:id = "@+id/descriptionLabelTv"
        android:layout_width="match_parent"
        android:layout_below="@+id/titleLabelTv"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_existing_account"
        android:textAlignment="center"
        style = "@style/TextAppearance.MaterialComponents.Caption"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        android:layout_width="match_parent"
        android:layout_above="@+id/passwordTil"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTil"
        android:text="@string/login"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_sign_up"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Caption"
        />
</RelativeLayout>